docs/versions/0.23.0/website/src/content/docs/agent-automation.mdx
---
title: Agent automation
description: Use Herdr's layout, pane, and agent primitives to coordinate coding agents from scripts or other agents.
---

Use Herdr as an automation layer for coding agents. A script can control them, or one agent can create work for other agents, inspect their state, and collect their results. Choose the primitive that matches the job.

## Three primitives

| Primitive | Responsibility |
| --- | --- |
| Layout (`workspace`, `tab`, and pane topology) | Create and organize terminal locations. |
| Pane | Control a raw terminal: run commands, send input, read output, and wait for output. |
| Agent | Control a recognized coding agent by name or pane and lifecycle state. |

A pane exists whether or not it contains an agent. An agent is the recognized process currently running inside a pane. `agent start` therefore requires an existing shell pane and never creates, splits, or moves layout.

Creating a workspace also creates its first tab and root pane; creating a tab creates its root pane. Use the returned pane ID for the first process, and split only when that layout needs another terminal.

Creation commands print JSON. Capture IDs from the response instead of predicting them:

```bash
created=$(herdr workspace create --cwd ~/project --label api --no-focus)
pane_id=$(printf '%s\n' "$created" | jq -r '.result.root_pane.pane_id')

split=$(herdr pane split "$pane_id" --direction right --no-focus)
review_pane=$(printf '%s\n' "$split" | jq -r '.result.pane.pane_id')
```

`workspace create` returns `.result.workspace`, `.result.tab`, and `.result.root_pane`. `tab create` returns `.result.tab` and `.result.root_pane`. `pane split` returns the new pane as `.result.pane`.

Moving a pane to another workspace changes its workspace-qualified pane ID. After any `pane move`, continue with `.result.move_result.pane.pane_id`; the response keeps the old value at `.result.move_result.previous_pane_id`. A running process keeps its launch-time Herdr environment, but the old `HERDR_PANE_ID` remains an alias for that terminal, so `--current` stays safe. New commands can still resolve the agent by name after the move, but a wait already in progress ends with `agent_not_running`.

Use pane commands for shells, tests, servers, CI watchers, and other ordinary terminal processes. Use agent commands when Herdr needs to understand which agent is running or whether it is `working`, `blocked`, `done`, `idle`, or `unknown`.

## Agent identity and launch

A pane ID such as `w1:p2` identifies the terminal location. An agent name such as `reviewer` is a convenient alias for the current agent in that pane. Names must match `[a-z][a-z0-9_-]{0,31}` and be unique among live agents. The alias is cleared when that agent exits, is released, or is replaced; it does not permanently rename the pane.

Agent commands accept either a unique live name or the pane ID that currently hosts the agent.

An available shell pane is at its interactive shell prompt: the shell itself owns the foreground, with no foreground command, editor, or agent running. Return the pane to its prompt before calling `agent start`.

`--kind` selects a supported agent and its canonical executable. Supported kinds are `pi`, `claude`, `codex`, `gemini`, `cursor`, `devin`, `agy`, `cline`, `omp`, `mastracode`, `opencode`, `copilot`, `kimi`, `kiro`, `droid`, `amp`, `grok`, `hermes`, `kilo`, `qodercli`, `qwen`, and `maki`. Arguments after `--` are passed unchanged to that executable.

Successful `agent start` returns only after Herdr detects the expected agent in the same terminal and marks it ready for interactive input. If detection reports `blocked` during startup, the command returns `agent_not_ready` immediately. The name remains available for `agent read` and `agent send-keys`, and becomes ready for prompts after detection reports `idle`. Startup waits for 30 seconds by default; `--timeout` must be greater than 3000 and no more than 300000 milliseconds.

```bash
herdr agent start reviewer --kind codex --pane "$review_pane" -- -m gpt-5.4
```

Agents launched manually are detected automatically and can be addressed by pane ID. Give one a name when a stable human-readable target is useful:

```bash
herdr agent get w1:p2
herdr agent rename w1:p2 reviewer
```

## Choose the control surface

| Goal | Command |
| --- | --- |
| Run a shell command and submit it | `pane run` |
| Send literal text without Enter | `pane send-text` |
| Send terminal keys or modifier chords | `pane send-keys` |
| Wait for text or a regular expression | `pane wait-output` |
| Start a supported agent in an existing pane | `agent start` |
| Submit a prompt, optionally waiting for it | `agent prompt` |
| Send keys to an agent's interactive UI | `agent send-keys` |
| Wait for agent lifecycle state | `agent wait` |

`agent prompt` submits text plus encoded Enter and honors the terminal's live bracketed-paste mode. It can prompt an agent that is already working. Use `agent send-keys` for interactions such as `esc`, `up`, `enter`, or `ctrl+c`; `escape` is accepted as an alias for `esc`. Use the pane input commands when you deliberately want raw terminal control.

`agent prompt` attributes the sender when the caller runs inside a bora pane: it fills `from_pane` from `$HERDR_PANE_ID` (override with `--from <pane>`, suppress with `--no-from`), and the server prepends `[from <pane> <name>]` to the injected text. The claim is verified against OS socket peer credentials — the server proves the calling process descends from the named pane's shell; an unverifiable claim is delivered as `[from? claimed <pane>]` instead.

`agent prompt --when-idle` defers delivery while the target is working instead of injecting bytes mid-turn. A busy target's prompt is queued server-side (bounded per-target FIFO) and delivered when the agent leaves the working state; the receipt reports `outcome: deferred` with a `queue_id`, and every terminal fate of a queued prompt (delivered, dropped for capacity, pane closed, agent changed) is emitted as an API event. Rapid repeat prompts from the same sender pane to the same target are rejected with `agent_prompt_rate_limited` (2 s cooldown).

Channels group agents for broadcast. A channel is a workspace named `#…`; `channel create|list|members` manage and inspect them, `channel send` posts `[#name from <pane> <name>] <text>` to every member agent pane (with when-idle deferral and per-member `delivered|deferred|failed` results) and appends the message to a bounded per-channel JSONL transcript that `channel history` replays. Every message carries a monotonic per-channel `seq` that survives log rotation.

An agent does not have to live in the channel's workspace to be a member. `channel join <name> [--pane ID]` adds a pane that already exists elsewhere, and `channel leave <name> [--pane ID]` removes it again; the pane defaults to `$HERDR_PANE_ID`, so an agent can join a channel it was told about without knowing its own pane id. A channel's member set is the panes in its `#name` workspace plus the panes that joined explicitly, and `channel members` labels which is which in a `source` column (`workspace` or `joined`). Joined membership is stored beside the transcript and survives a restart; a pane that no longer exists stops being a member on its own. Joining is idempotent — joining twice, or joining a pane that already lives in the channel's workspace, succeeds and reports the membership you actually have.

```bash
herdr channel join eng --pane w3B:p1              # pull an existing agent into #eng
herdr channel members eng                         # w3B:p1  idle  brandos  joined
herdr channel leave eng --pane w3B:p1
```

`channel tail <name> [--after SEQ] [--follow|-f] [--json]` follows that transcript by cursor instead of replaying a fixed window. Without `--after`, it starts from `0` and prints everything retained; pass the last `seq` you saw to resume from there. One-shot (no `--follow`) prints the current backlog and exits; `--follow` keeps polling and prints new messages as they arrive until interrupted. Human output is `SEQ HH:MM name: text`; `--json` prints the raw `channel.wait` response per batch. If rotation dropped messages between your cursor and the oldest retained line, `channel tail` reports that as a `#gap:` notice on stderr instead of silently resuming as if nothing were missing.

```bash
herdr channel tail eng --json                    # one-shot backlog snapshot
herdr channel tail eng --after 42 --follow        # resume from seq 42 and keep watching
```

`channel send` addresses a single agent pane with a leading `@nick ` token in the message text: `channel send eng "@reviewer take a look"`. The nick matches a member pane's display name, assigned name, detected agent kind, or raw pane id. When it resolves to exactly one pane, only that pane receives the injected text (the transcript still appends normally); when it doesn't uniquely resolve — unknown or ambiguous — the send degrades to an ordinary broadcast to every member pane instead of erroring or dropping the message, so a typo'd nick never loses text. Write `\@` or `\#` to talk about the syntax literally; both unescape to `@`/`#` in the stored and delivered text. `channel send <name> "<text>" --to <nick>` addresses the same way but fails loudly with `channel_nick_unknown` or `channel_nick_ambiguous` instead of degrading — use it when a miss should stop the send rather than fall back to broadcast.

Any pane that joins a channel, or receives its first message in one, gets a one-time briefing: a `[bora] channel protocol for #name (v1):` prompt teaching how to reply, address, and catch up in that channel. It's delivered through the same `agent prompt` path as any other injected text, so it's deferred while the pane is working and — because it carries no `from_pane` — exempt from the per-sender rate limit. Delivery is recorded per `(channel, pane, version)` in `channels/<name>.protocol.json`, so a server restart never re-sends it; bumping `CHANNEL_PROTOCOL_VERSION` does.

Pane input addresses the terminal regardless of its current occupant. Agent input resolves the live agent and rejects the operation if that agent no longer controls the pane.

`agent prompt --wait` submits immediately. If the agent starts from a non-working state, Herdr must observe a lifecycle change within five seconds. Otherwise, it returns `agent_prompt_stalled` instead of waiting indefinitely; a caller `--timeout` of five seconds or less returns the normal `timeout` error. After Herdr observes activity, it waits for the requested settled status. It does not track individual turns. If the agent is already working, completion of that active turn may satisfy the wait. Standalone `agent wait` observes the current agent and returns immediately if its status already matches. Both commands default to `idle`, `done`, or `blocked`. Repeat `--until` to accept several exact states, for example `--until idle --until done`; use `--until unknown` explicitly when needed. On `agent prompt`, `--until` requires `--wait`.

`idle` means the agent is ready for input and its tab has been seen in the focused Herdr UI. `done` is the same underlying idle state after background work finishes, until that tab is focused or `pane focus` / `agent focus` targets it. Reading through the CLI does not mark it seen. `blocked` means Herdr recognized an approval or question UI. `unknown` means an agent is present but Herdr cannot classify its lifecycle confidently; it does not prove successful completion. Use exact `--until` states when that distinction matters.

`pane wait-output` does not interpret agent lifecycle. It polls the selected terminal snapshot and searches it immediately, so text that was already present can match. The default source name is `recent`; matching treats that source as unwrapped recent output from the latest 80 rendered terminal rows. `--lines` changes that row limit, and `--regex` uses Rust regular-expression syntax and matches one line at a time.

At the CLI, both `pane read` and `agent read` print terminal text directly. The default is UTF-8 text with ANSI escapes stripped; use `--format ansi` or `--ansi` to preserve terminal escapes where the source exposes them. The `detection` source is always plain text. For recent sources, `--lines N` selects the last N rendered terminal rows before optional unwrapping; without it, reads default to 80 rows. For `visible` and `detection`, omitting `--lines` returns the full snapshot, while specifying it keeps the last N newline-delimited lines. The socket API returns the text at `.result.read.text`.

## Alternate-screen history reads

Full-screen agents such as Claude Code and OpenCode render transcript history in the terminal's alternate screen instead of Herdr's host scrollback. For an idle, recognized agent at the bottom of its transcript, text reads from `recent` or `recent-unwrapped` automatically use the agent's mouse-scroll interface when `--lines` requests more than the visible screen. Herdr collects overlapping pages and returns the viewport to the bottom before completing the read. The same behavior applies to `pane read` when the pane contains that agent; it requires no additional option.

Other reads remain passive. Herdr does not move the application viewport for `visible`, `detection`, or ANSI reads, output waits and subscriptions, a manually scrolled agent, a direct attachment, or an application that does not report mouse-wheel input. An explicit `agent read --lines N` that needs alternate-screen history returns `agent_not_idle` while the agent is working, blocked, or unknown; wait for idle and retry, or use `--source visible`. Other recent reads return the available screen and host scrollback as before.

If a full response is still unavailable, ask the agent to write it as Markdown in a temporary directory and reply only with the file path, then read the file directly.

Successful `agent start`, `agent prompt`, and `agent wait` commands return the current agent at `.result.agent`. `pane wait-output` returns `.result.pane_id`, `.result.matched_line`, and the matched snapshot at `.result.read`.

Wait commands have no default timeout and can wait indefinitely. On timeout or another server error, CLI commands print a JSON error to stderr and exit with status 1; invalid CLI syntax exits with status 2.

## Chat view

`ui.chat_view` (default `false`) gates a native TUI chat view for `#` channels — a fork-only addition, not something upstream Herdr has. Set `ui.chat_view = true` in config, then open it with `prefix+i` (configurable via `keys.chat`) or the `chat` entry in the global menu (bottom-right `● menu` button); both stay hidden while the flag is off.

The view is a three-column overlay: channels on the left, the message timeline in the center (`HH:MM sender text`, wrapped, stick-to-bottom), and channel members with live agent-status icons on the right. A composer line at the bottom is always focused. It reads and writes through the same `channel.list`/`channel.history`/`channel.members`/`channel.send` API external clients use, with new messages pushed in as they're sent rather than polled.

Mouse: click a channel to switch to it, scroll the timeline with the wheel, click outside the overlay to close it. Keyboard: `Enter` sends, `Esc` closes, `Tab`/`Shift+Tab` cycle channels, `Up`/`Down` scroll a few lines and `PageUp`/`PageDown` scroll a full viewport, `Ctrl+U` clears the composer. Sending from the chat view uses the same leading `@nick` addressing as `channel send` — a targeted message shows a `›` marker next to the sender name.

### Your seat in the channel

You are a channel participant, not just a reader. Messages you send from the chat view are attributed to you: set `ui.chat_name` in config to pick the name, or leave it unset and Bora uses `$USER` (then `$LOGNAME`, then `you`). Your lines render bold and accented so they stand apart from agents.

Agents can address you back. `@<your chat name>` resolves to your seat in every channel, case-insensitively — the message lands in the transcript marked for you and is delivered to no pane, so a question meant for a human never injects into another agent's prompt. Give yourself a name no agent shares: a collision is treated as genuine ambiguity and errors rather than guessing.

Those lines carry a highlight band in the timeline, and if one arrives while the chat view is closed the view opens by itself — on the channel that mentioned you. Two guards keep that polite: it never happens while you have typed within the last 3 seconds (a focus change never eats your keystrokes), and it never opens over anything but quiet browsing (`Terminal`/`Navigate`) — onboarding, prompts, and modals are never hijacked, and any mode added later defaults to not interrupting you. When a guard suppresses the open you get the needs-attention toast instead, and `Esc` on an auto-opened view returns you exactly where you were. `ui.chat_open_on_mention = false` (default `true`) turns the auto-open off and keeps the toast; the key only has effect while `ui.chat_view` is on.

Only the chat view can speak as you. It sends in-process, and the human flag is never accepted over the socket, so a client or agent cannot forge a message from you. Your sends are also exempt from the per-channel rate limit that paces agents.

### Creating a channel from the view

The channel column ends in a `+ new channel` row. Click it (or press `Ctrl+N`)
and a small prompt asks for a name; a leading `#` is optional and stripped, so
`#eng` and `eng` both make `#eng`. `Enter` creates the channel through
`channel.create`, reloads the list, and selects the new room so you land in
what you just made. `Esc` cancels the prompt without closing the chat view.

A rejected name — one that already exists, or a workspace that could not be
created — is reported on the status line with the server's own message, and
the prompt stays open with your text intact so you can fix it rather than
retype it.

### Managing members from the view

Membership is managed where you can see it, so recruiting an agent never means
leaving the chat view for `bora channel join`.

The members column ends in a `+ add agent` row. Click it (or press `Ctrl+A`) and
Bora lists every running agent across all workspaces that is not already a
member, with its live status and a shortened working directory so two agents
with the same nick in different worktrees stay distinguishable. Type to filter
by name or directory, `Up`/`Down` move the highlight, `Enter` joins the
highlighted agent, and clicking a row joins it directly. `Esc` closes the
prompt without closing the chat view. The members column refreshes on join, so
you see the membership land rather than being told it did.

Each member row carries a `×` at its right edge; clicking that removes the
member (`channel.leave`). Clicking anywhere else on the row inserts
`@<name> ` into the composer instead, so addressing someone is a click and a
stray click cannot eject them. Panes that live in the channel's own `#name`
workspace are members by construction: removing one is refused, and the status
line says so instead of reporting a removal that did not happen.

## Recipes

Start a helper, give it work, and wait for that work to settle:

```bash
split=$(herdr pane split --current --direction right --no-focus)
review_pane=$(printf '%s\n' "$split" | jq -r '.result.pane.pane_id')
herdr agent start reviewer --kind codex --pane "$review_pane" -- -m gpt-5.4
herdr agent prompt reviewer "Review the current diff" --wait --timeout 120000
herdr agent read reviewer --source recent-unwrapped --lines 120
```

Wait for an agent to ask for input, inspect it, and interact with its UI:

```bash
herdr agent wait reviewer --until blocked --timeout 120000
herdr agent read reviewer --source recent-unwrapped --lines 80
herdr agent send-keys reviewer esc
```

Run an ordinary process and wait for its output without treating it as an agent:

```bash
herdr pane run w1:p3 "just test --watch"
herdr pane wait-output w1:p3 --regex "passed|failed" --timeout 120000
```

See the [CLI reference](/docs/cli-reference/) for the complete command and option list. Shell completions expose the same command tree interactively.
